# Vectorization

./: .gitignore  LICENSE  MainTask.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: design.md
spec/: 00_init_project.md  01_read_image.md  02_preprocess.md  03_vectorize.md  04_optimize.md  05_color.md  06_svg.md  07_over.md
tests/: test_color_quantize.py  test_contour.py  test_io.py  test_pipeline.py  test_preprocess.py  test_simplify.py  test_svg_export.py
vectorizer/: __init__.py  cli.py  color_quantize.py  contour.py  exceptions.py  io.py  pipeline.py  preprocess.py  simplify.py  svg_export.py
